Windows installer bug with bad path